snippets/Nemerle.Statechart/Tests/testsuite/negative/event_class_not_found.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart( // W: No Statechart to generate
  <#
  flags testing;
  //flags debug;
  
  name "event class not found";
  
  event_class Events1; // E: Event class "Events1" not found
  
  #>)]
public class example
{
}

